# Drone_Resupply

./: .gitignore  BENCHMARK_SETUP_COMPLETE.md  CACHE_IMPLEMENTATION.md  CACHE_INTEGRATION_GUIDE.md  CMakeLists.txt  DOI_CHIEU_TAI_LIEU_VS_CODE.md  LONGEST_ROUTE_OPTIMIZATION.md  Makefile  Project3_ Mô tả bài toán-Drone resupply, pick up – delivery.docx  README_CODE_STRUCTURE.md  U_100_0.5_Num_1_pd.txt  U_100_0.5_Num_3_pd.txt  U_100_1.0_Num_10_pd.txt  U_100_1.0_Num_1_pd.txt  U_100_1.0_Num_3_pd.txt  U_100_1.0_Num_4_pd.txt  U_100_1.0_Num_5_pd.txt  U_100_1.0_Num_6_pd.txt  U_100_1.0_Num_7_pd.txt  U_100_1.0_Num_8_pd.txt  U_100_1.5_Num_10_pd.txt  U_100_1.5_Num_1_pd.txt  U_100_1.5_Num_7_pd.txt  U_100_2.0_Num_10_pd.txt  U_100_2.0_Num_1_pd.txt  U_100_2.0_Num_2_pd.txt  U_100_2.0_Num_3_pd.txt  U_100_2.0_Num_4_pd.txt  U_100_2.0_Num_6_pd.txt  U_100_2.5_Num_10_pd.txt  U_100_2.5_Num_1_pd.txt  U_100_2.5_Num_4_pd.txt  U_100_2.5_Num_5_pd.txt  U_100_2.5_Num_6_pd.txt  U_100_2.5_Num_8_pd.txt  U_100_3.0_Num_1_pd.txt  U_100_3.0_Num_2_pd.txt  U_100_3.0_Num_3_pd.txt  U_100_3.0_Num_4_pd.txt  U_100_3.0_Num_5_pd.txt  (+237 more)
Instance /: U_100_0.5_Num_10_pd.txt  U_100_0.5_Num_2_pd.txt  U_100_0.5_Num_4_pd.txt  U_100_0.5_Num_5_pd.txt  U_100_0.5_Num_6_pd.txt  U_100_0.5_Num_7_pd.txt  U_100_0.5_Num_8_pd.txt  U_100_0.5_Num_9_pd.txt  U_100_1.0_Num_2_pd.txt  U_100_1.0_Num_9_pd.txt  U_100_1.5_Num_2_pd.txt  U_100_1.5_Num_3_pd.txt  U_100_1.5_Num_4_pd.txt  U_100_1.5_Num_5_pd.txt  U_100_1.5_Num_6_pd.txt  U_100_1.5_Num_8_pd.txt  U_100_1.5_Num_9_pd.txt  U_100_2.0_Num_5_pd.txt  U_100_2.0_Num_7_pd.txt  U_100_2.0_Num_8_pd.txt  U_100_2.0_Num_9_pd.txt  U_100_2.5_Num_2_pd.txt  U_100_2.5_Num_3_pd.txt  U_100_2.5_Num_7_pd.txt  U_100_2.5_Num_9_pd.txt  U_100_3.0_Num_10_pd.txt  U_100_3.0_Num_6_pd.txt  U_100_3.0_Num_7_pd.txt  U_100_3.0_Num_8_pd.txt  U_10_0.5_Num_10_pd.txt  U_10_0.5_Num_3_pd.txt  U_10_0.5_Num_7_pd.txt  U_10_0.5_Num_8_pd.txt  U_10_0.5_Num_9_pd.txt  U_10_1.0_Num_10_pd.txt  U_10_1.0_Num_1_pd.txt  U_10_1.0_Num_3_pd.txt  U_10_1.0_Num_4_pd.txt  U_10_1.0_Num_8_pd.txt  U_10_1.5_Num_1_pd.txt  (+216 more)
Instances 2/: C101_1.txt  READ ME.txt  (+481 more)
(+145 files in other folders)
